--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,144 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav {
+  background: #fff4ca;
+  border-bottom: 2px solid #ffd31f;
+  padding: 10px;
   display: flex;
-  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.body {
+  display: flex;
+  padding: 10px;
+  height: calc(100% - 57px);
+  background-color: #fff;
+  box-sizing: border-box;
+}
+
+.sidebar {
+  border: 2px solid #1f73ff;
+  margin-right: 10px;
+  background: #cbdfff;
+  max-height: 120px;
+  flex-basis: 120px;
+  padding: 10px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.sidebar .stats {
+  text-transform: lowercase;
+  font-size: 12px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content {
+  padding: 10px;
+  border: 2px solid #8bc34a;
+  background-color: #f1f8e9;
+  flex: 1;
 }
+
+.user-avatar {
+  border-radius: 50%;
+  width: 64px;
+  height: 64px;
+}
+
+.user-avatar:hover {
+  cursor: pointer;
+}
+
+.user-avatar.small {
+  width: 32px;
+  height: 32px;
+}
+
+.user-stats {
+  width: 100%;
+}
+
+.user-stats > div:first-child {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 10px;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.19);
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: #fff;
+  padding: 20px;
+  position: relative;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgb(0 0 0 / 25%);
+  display: flex;
+  border: 2px solid #e5e5e5;
+}
+
+.btn_close{
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: #fff;
+  background-color: #fd4747;
+  border: none;
+  padding: 1px 4px;
+  border-radius: 2px;
+}
+.btn_close:hover{
+  cursor: pointer;
+  background-color: red;
+  transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.button {
+  display: inline-block;
+  padding: 8px 20px;
+  font-size: 10px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 3px;
+  box-shadow: 0 2px 4px rgb(0 0 0 / 25%);
+  transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.button:hover {
+  background-color: #3e8e41;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+
+input[type="text"] {
+  display: block;
+  width: 100%;
+  padding: 4px 16px;
+  font-size: 15px;
+  border: 2px solid #4CAF50;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgb(0 0 0 / 25%);
+  transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  margin-right: 10px;
+}
+
+input[type="text"]:focus {
+  outline: none;
+  border-color: #3e8e41;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+}
+
+
